--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile first</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Assunto Droga</title>
+    <link rel="stylesheet" href="drogas.css">
 </head>
 <body>
-    <div class="caixa">
-        <div class="redondo"></div>
-    </div>
+    <footer class="menu">
+        Menu
+    </footer>
+    <section class="conteudo">
+        conteúdo
+    </section>
+    <footer class="rodape">
+        @Gastão_Vidigal
+        Segundo F - Manhã
+        @Anielly
+    </footer>
 </body>
 </html>
