--- a/index.html
+++ b/index.html
@@ -8,11 +8,39 @@
     <link rel="stylesheet" href="drogas.css">
 </head>
 <body>
-    <footer class="menu">
-        Menu
-    </footer>
+    <header class="menu">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Tipos <a href="tipos.html"></a></li>
+            </ul>
+        </nav>
+    
+    </header>
     <section class="conteudo">
         conteúdo
+        <div>
+            <div>
+                uma imagem aleatoria da internet
+            </div>
+            <div>
+                <img class="img.mobile" src="imagem.jpg" alt="Uma caveira com varios comprimidos.">
+            </div>
+
+            <div>
+                uma imagem aleatoria da internet
+            </div>
+            <div>
+                <img class="img.mobile" src="images.jpeg" alt="Uma caveira com varios comprimidos.">
+            </div>
+
+            <div>
+                uma imagem aleatoria da internet
+            </div>
+            <div>
+                <img class="img.mobile" src="imagem.jpg" alt="Uma caveira com varios comprimidos.">
+            </div>
+        </div>
     </section>
     <footer class="rodape">
         @Gastão_Vidigal
