--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     
     </header>
     <section class="conteudo">
-        conteúdo
-        <div>
+        conteúdo:
+
+        <div class="conteudo-home">
             <div>
                 uma imagem aleatoria da internet
             </div>
