--- a/index.html
+++ b/index.html
@@ -4,49 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assunto Droga</title>
-    <link rel="stylesheet" href="drogas.css">
+    <title>Assunto - Drogas</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+
     <header class="menu">
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>Tipos <a href="tipos.html"></a></li>
-            </ul>
+
+        <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tipo.html">Tipos</a></li>
+        </ul>
+        
         </nav>
-    
     </header>
-    <section class="conteudo">
-        conteúdo:
 
-        <div class="conteudo-home">
-            <div>
-                uma imagem aleatoria da internet
-            </div>
-            <div>
-                <img class="img.mobile" src="imagem.jpg" alt="Uma caveira com varios comprimidos.">
-            </div>
 
-            <div>
-                uma imagem aleatoria da internet
-            </div>
-            <div>
-                <img class="img.mobile" src="images.jpeg" alt="Uma caveira com varios comprimidos.">
-            </div>
+<section class="conteudo">
 
-            <div>
-                uma imagem aleatoria da internet
-            </div>
-            <div>
-                <img class="img.mobile" src="imagem.jpg" alt="Uma caveira com varios comprimidos.">
-            </div>
-        </div>
-    </section>
-    <footer class="rodape">
-        @Gastão_Vidigal
-        Segundo F - Manhã
-        @Anielly
-    </footer>
+<div>
+    <div>
+     Imagem:
+    </div>
+
+    <div class="conteudo-home">
+
+    <div>
+     <img class="img-mobile" src="dorgas.jpeg" alt="Cigarros, bebidas, pílulas e seringas em um fundo preto.">
+    </div>
+
+     <div>
+     <img class="img-mobile" src="dorgas2.jpeg" alt="Pessoa fumando.">
+    </div>
+
+    <div>
+     <img class="img-mobile" src="dorgas3.jpeg" alt="várias pílulas vermelhas e.">
+    </div>
+
+    </div>
+
+</div>
+</section>
+
+
+ <footer class="rodape">
+@Gastão_Vidigal <br>
+Segundo F - Manhã <br>
+@Anielly_silva
+ </footer>
+
 </body>
 </html>
