--- a/index.html
+++ b/index.html
@@ -4,55 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assunto - Drogas</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Drogas</title>
+    <link rel="stylesheet" href="dorgas.css">
 </head>
 <body>
-
     <header class="menu">
-        <nav>
-
+      <nav>
         <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tipo.html">Tipos</a></li>
+            <li>Home</li>
+            <li>Tipos <a href="tipos.html">Tipos</a></li>
         </ul>
-        
-        </nav>
+      </nav>
     </header>
-
-
-<section class="conteudo">
-
-<div>
-    <div>
-     Imagem:
-    </div>
-
-    <div class="conteudo-home">
-
-    <div>
-     <img class="img-mobile" src="dorgas.jpeg" alt="Cigarros, bebidas, pílulas e seringas em um fundo preto.">
-    </div>
-
-     <div>
-     <img class="img-mobile" src="dorgas2.jpeg" alt="Pessoa fumando.">
-    </div>
-
-    <div>
-     <img class="img-mobile" src="dorgas3.jpeg" alt="várias pílulas vermelhas e.">
-    </div>
-
-    </div>
-
-</div>
-</section>
-
-
- <footer class="rodape">
-@Gastão_Vidigal <br>
-Segundo F - Manhã <br>
-@Anielly_silva
- </footer>
-
+    <section class="conteudo">
+      conteudo 
+      <div class="conteudo-home">
+        <div>
+            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+        </div>
+        <div>
+            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+        </div>
+      </div>
+    </section>
+    <footer class="rodape">
+      @Gastão_Vidigal <br>
+      Segundo F - Manhã <br>
+      @Anielly_silva
+    </footer>
 </body>
 </html>
