--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drogas</title>
     <link rel="stylesheet" href="dorgas.css">
+    <title>Drogas</title>
 </head>
 <body>
-    <header class="menu">
-      <nav>
-        <ul>
-            <li>Home</li>
+    <header class="heder">
+        <a href="logo" href="index.html">LOGO</a>
+        <input class="site-menu" type="checkbox" id="site-menu">
+        <label class="hamburger" for="site-menu"> <span class="hanb-line"></span></label>
+
+      <nav class="nav">
+        <ul class="menu">
+            <li><a href="#">link 1</a></li>
+            <li><a href="#">link 2</a></li>
+            <li><a href="#">link 3</a></li>
             <li>Tipos <a href="tipos.html">Tipos</a></li>
         </ul>
       </nav>
     </header>
     <section class="conteudo">
       conteudo 
+      
       <div class="conteudo-home">
         <div>
             <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
