--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dorgas.css">
-    <title>Drogas</title>
+    <link rel="stylesheet" href="drogas.css">
+    <title>drogas</title>
 </head>
 <body>
-    <header class="heder">
-        <a href="logo" href="index.html">LOGO</a>
-        <input class="site-menu" type="checkbox" id="site-menu">
-        <label class="hamburger" for="site-menu"> <span class="hanb-line"></span></label>
-
+    <header class="header">
+        <a class="logo" href="index.html"><img id="logo" src="naodrogas1.png" alt=""></a>
+        <input class="side-menu" type="checkbox" id="side-menu">
+        <label  class="hamburger" for="side-menu"> <span class="hamb-line"></span> </label>
       <nav class="nav">
         <ul class="menu">
-            <li><a href="#">link 1</a></li>
-            <li><a href="#">link 2</a></li>
-            <li><a href="#">link 3</a></li>
-            <li>Tipos <a href="tipos.html">Tipos</a></li>
+            <li><a href="link1.html">link 1</a></li>
+            <li><a href="estudogrid.html">link 2</a></li>
+            <li><a href="sobre.html">link 3</a></li>
+            <li><a href="tipos.html">tipos</a></li>
         </ul>
       </nav>
     </header>
     <section class="conteudo">
-      conteudo 
-      
-      <div class="conteudo-home">
+     conteudo
+
+     <div class="conteudo-home">
+
+     </div>
+     <div>
         <div>
-            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+            imagem
         </div>
         <div>
-            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+            <img class="img-mobile" src="img1.png" alt="uma caveira com varios comprimidos.">
+        </div>
+
+        <div>
+            imagem
         </div>
         <div>
-            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
+            <img class="img-mobile" src="img2.png" alt="uma caveira com varios comprimidos.">
+        </div>
+
+        <div>
+            imagem
         </div>
         <div>
-            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
+            <img class="img-mobile" src="img3.png" alt="uma caveira com varios comprimidos.">
         </div>
-        <div>
-            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
-        </div>
-        <div>
-            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
-        </div>
-        <div>
-            <img class= "img-mobile" src="drogas.jpeg" alt="diversos tipos de drogas">
-        </div>
-        <div>
-            <img class= "img-mobile" src="drogas2.jpeg" alt="diversos tipos de drogas também">
-        </div>
-      </div>
+     </div>
+
     </section>
     <footer class="rodape">
-      @Gastão_Vidigal <br>
-      Segundo F - Manhã <br>
-      @Anielly_silva
+      @gastao vidigal
+      segundo F - manha 
+      @Anielly - 8
     </footer>
 </body>
 </html>
