--- a/estudogrid.html
+++ b/estudogrid.html
@@ -8,21 +8,18 @@
     <link rel="stylesheet" href="estudo.css">
 </head>
 <body>
-<section class="meu-site">
+  <section class="meu-site">
     <div class="barra">
-        Barra
+barra
     </div>
-
     <div class="lado">
-        Lado
+lado
     </div>
-
     <div class="principal">
-        Principal
+principal
     </div>
-
     <div class="rodape">
-        Rodape
+rodape
     </div>
 </section>
 </body>
