--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer class="rodape">
       @gastao vidigal
       segundo F - manha 
-      @Anielly - 8
+      @Anielly- silva
     </footer>
 </body>
 </html>
