--- a/tipos.html
+++ b/tipos.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de Drogas</title>
+    <title>tipos de drogas</title>
 </head>
 <body>
     <header class="menu">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Tipos</li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+           <li>home</li>
+           <li>tipos</li>
+        </ul>
+      </nav>
     </header>
-    <section class="conteudo">
-        
-    </section>
 </body>
 </html>
