--- a/index.html
+++ b/index.html
@@ -23,29 +23,43 @@
         </ul>
       </nav>
     </header>
-
     <section class="conteudo">
-     conteudo:
-
-     <div class="conteudo-home">
-        <div>
-            imagem
-            <div>
-                <img class="img-mobile" src="img1.png" alt="remedios e agulhas e um liquido.">
-            </div>
-
-            <div>
-                imagem
-            </div>
-            <img class="img-mobile" src="img2.png" alt="remedios e agulhas.">
+        <div class="geral">
+            <div class="img-drogas"></div>
+            <img src="drogas.jpeg" alt="">
+        <div class="definição"></div>
+            <h1>Drogas</h1>
+         <p>Deacordo com a wikipedia (Visite: <a href="https://brasilescola.uol.com.br/drogas"></a>Drogas)</p>
+            <p>Drogas são toda e qualquer substância capaz de alterar as funções fisiológicas ou psicobiológicas de um organismo. Dessa maneira, um analgésico ou 
+            um antiácido, frequentemente tomados para melhorar mal-estar, também são considerados drogas. Entretanto, o termo “drogas” é comumente usado para 
+            definir as substâncias ilícitas, ligadas ao tráfico e ao mundo do crime. Apesar de não estar errado, definir como drogas apenas essas substâncias é
+            uma abordagem ingênua.
+            É possível observar que boa parte das drogas é legalizada e usada na medicina para tratar os mais variados tipos de doenças.
+            No entanto, algumas delas geram polêmica por causar dependência. No Brasil, há uma grande quantidade de drogas proibidas, 
+            mesmo que sejam para tratamento médico.</p></a>
+    </div>
+        <div class="item1">
+            conteúdo 01
+        </div>
+        <div class="item2">
+            conteúdo 02
+        </div>
+        <div class="item3">
+            conteúdo 03
+        </div>
+        <div class="item4">
+            conteúdo 04
+        </div>
+        <div class="item5">
+            conteúdo 05
+        </div>
+        <div class="item6">
+            conteúdo 06
         </div>
 
-        <div>
-            imagem
-        </div>
-        <img class="img-mobile" src="img3.png" alt="cigarro, comprimidos e agulhas">
-     </div>
     </section>
+
+    
     <footer class="rodape">
       @gastao vidigal
       segundo F - manha <br>
